# cross-platform-build-environment

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json
.claude/skills/add-library/: SKILL.md
cmake/: BuildConfig.cmake  SuperBuild.cmake  install_project.cmake
cmake/modules/: BinaryDeps.cmake  CmakeEnum.cmake  CompilerWarnings.cmake  CrossCompileHelpers.cmake  Generate.cmake  GitVersion.cmake  InstallHelpers.cmake  RuntimeDeps.cmake  StripDebug.cmake
cmake/toolchains/: Clang.cmake  RaspberryPi1.cmake  RaspberryPi2.cmake  RaspberryPi3.cmake  RaspberryPi4.cmake  RaspberryPi5.cmake  Ubuntu2004.cmake  Ubuntu2404.cmake  Yocto.cmake  common.cmake
docs/: build-system-getting-started.md  build-system-overview.md  build-system-spec-external.md  build-system-spec-modules.md  build-system-spec-presets.md  overview.md  spec-external.md  spec-presets.md
scripts/: build-system-build.sh  build-system-deploy.sh  build-system-get-sysroot-rpi.sh  build-system-get-sysroot-yocto.sh  build-system-install-toolchains.sh  build-system-sync-sysroot.sh
tests/: CMakeLists.txt
